--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@ body {
   line-height: 1.5;
   padding: 4em 1em;
   color: #595;
-  background-color: #f1f0f2;
+  background-color: #f1f042;
 }
 
 h2 {
